made a small change to the h2 tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div> 
         <div id="startpage">
             <h2>This quiz will test your knowledge</h2>
-            <h2>about the country of Brazil</h2>
+            <h2>about the country of Brazil - an awesome country!</h2>
         <button id="startbtn">Start Code Quiz</button>
         </div>
 
